# ma-producer

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  entrypoint.sh  setup.sh  start.sh
src/: main.rs
